Fixed dialog box height on iPhone

--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -25,10 +25,10 @@
 	z-index:0;
 	position: fixed;
 	float: left;
-	height: 220px;
+	height: 240px;
 	width: 200px;
 	left: 50px;
-	top: 130px;
+	top: 110px;
 	background: #FFF;
 	border-top: 1px solid #FFF;
 	-webkit-box-shadow: 0 0 8px rgba(0,0,0,0.85);
